fixed content not showing

--- a/less/footer.less
+++ b/less/footer.less
@@ -2,8 +2,8 @@
     color: #ffffff;
 }
 #footer-sidebar {
-    display: inline-block;
-    height: 250px;
+    display: block;
+    height: 1920px;
 }
     
 #footer-sidebar1 {
